# interface_sdk_c

./: 18sdk修改.txt  README.OpenSource  ndk_targets.gni  sdk-c.diff  sing  test.txt
.gitee/: PULL_REQUEST_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.zh-CN.md
BasicServicesKit/: BUILD.gn  libos_account.ndk.json  libtime_service.ndk.json  ohbattery_info.h  ohbattery_info.ndk.json  ohprint.h  ohprint.ndk.json  ohscan.h  os_account.h  os_account_common.h  time_service.h
CryptoArchitectureKit/: BUILD.gn  crypto_architecture_kit.h  crypto_asym_key.h  crypto_common.h  crypto_digest.h  crypto_rand.h  crypto_signature.h  crypto_sym_cipher.h  crypto_sym_key.h  libcrypto.ndk.json
DataProtectionKit/: BUILD.gn  dlp_permission_api.h  libdlppermission.ndk.json
GameControllerKit/: BUILD.gn  game_controller_type.h  game_device.h  game_device_event.h  game_pad.h  game_pad_event.h  libohgame_controller.ndk.json
IPCKit/: BUILD.gn  ipc_cparcel.h  ipc_cremote_object.h  ipc_cskeleton.h  ipc_error_code.h  ipc_kit.h
LocationKit/: BUILD.gn  liblocation.ndk.json  oh_location.h  oh_location_type.h
NotificationKit/: BUILD.gn  libohnotification.ndk.json  notification.h
TEEKit/: BUILD.gn  libteec.ndk.json
TEEKit/include/tee/: dstb_api.h  pthread_attr.h  rpmb_driver_rw_api.h  rpmb_fcntl.h  tee_agent.h  tee_apm_api.h  tee_arith_api.h  tee_core_api.h  tee_crypto_api.h  tee_crypto_hal.h  tee_defines.h  tee_drv_client.h  tee_dynamic_srv.h  tee_ext_api.h  tee_get_recoverymode.h  tee_hw_ext_api.h  tee_hw_ext_api_legacy.h  tee_internal_se_api.h  tee_log.h  tee_mem_mgmt_api.h  tee_notify_set_priority.h  tee_object_api.h  tee_property_api.h  tee_rtc_time_api.h  tee_service_public.h  tee_sharemem.h  tee_sharemem_ops.h  tee_time_api.h  tee_trusted_storage_api.h  tee_tui_gp_api.h
TEEKit/include/tee_client/: tee_client_api.h  tee_client_constants.h  tee_client_type.h
ani/: BUILD.gn  (+1 more)
backgroundtasks/transient/: BUILD.gn  libtransient_task.ndk.json
backgroundtasks/transient/include/: transient_task_api.h  transient_task_type.h
distributeddatamgr/preferences/: BUILD.gn  libpreferences.ndk.json
distributeddatamgr/preferences/include/: oh_preferences.h  oh_preferences_err_code.h  oh_preferences_option.h  oh_preferences_value.h
distributeddatamgr/relational_store/: BUILD.gn  libnative_rdb.ndk.json
distributeddatamgr/relational_store/include/: data_asset.h  oh_cursor.h  oh_data_value.h  oh_data_values.h  oh_data_values_buckets.h  oh_predicates.h  oh_rdb_crypto_param.h  oh_rdb_transaction.h  oh_rdb_types.h  oh_value_object.h  oh_values_bucket.h  relational_store.h  relational_store_error_code.h
distributedhardware/device_manager/: BUILD.gn  libdevicemanager.ndk.json
distributedhardware/device_manager/include/: oh_device_manager.h  oh_device_manager_err_code.h
filemanagement/cloud_disk_manager/: BUILD.gn  liboh_cloud_disk_manager.ndk.json
filemanagement/cloud_disk_manager/include/: cloud_disk_error_code.h  oh_cloud_disk_manager.h
filemanagement/compress/: BUILD.gn
filemanagement/compress/include/: oh_archive.h  oh_archive_errcode.h
global/i18n/: BUILD.gn  libnative_i18n.ndk.json
global/i18n/include/: errorcode.h  timezone.h
global/resource_management/: BUILD.gn  libnative_resmgr.ndk.json  librawfile.ndk.json
global/resource_management/include/rawfile/: raw_dir.h  raw_file.h  raw_file_manager.h
global/resource_management/include/resourcemanager/: ohresmgr.h  resmgr_common.h
graphic/graphic_2d/native_display_soloist/: BUILD.gn  libnative_display_soloist.ndk.json  native_display_soloist.h
inputmethod/: BUILD.gn  libohinputmethodndk.json
inputmethod/include/: inputmethod_attach_options_capi.h  inputmethod_controller_capi.h  inputmethod_cursor_info_capi.h  inputmethod_inputmethod_proxy_capi.h  inputmethod_private_command_capi.h  inputmethod_text_avoid_info_capi.h  inputmethod_text_config_capi.h  inputmethod_text_editor_proxy_capi.h  inputmethod_types_capi.h
multimedia/audio_framework/: BUILD.gn  ohaudio.ndk.json
multimedia/audio_framework/audio_capturer/: native_audiocapturer.h
multimedia/audio_framework/audio_manager/: native_audio_debugging_manager.h  native_audio_device_enhance_manager.h  native_audio_manager.h  native_audio_resource_manager.h  native_audio_routing_enhance_manager.h  native_audio_routing_manager.h  native_audio_session_manager.h  native_audio_stream_manager.h  native_audio_volume_manager.h
multimedia/audio_framework/audio_renderer/: native_audiorenderer.h
multimedia/audio_framework/audio_suite_engine/: BUILD.gn  native_audio_converter.h  native_audio_suite_base.h  native_audio_suite_download_manager.h  native_audio_suite_engine.h  ohaudiosuite.ndk.json
multimedia/audio_framework/common/: native_audio_common.h  native_audio_device_base.h  native_audio_session_base.h  native_audiostream_base.h  native_audiostreambuilder.h
multimedia/av_session/: BUILD.gn  libohavsession.ndk.json  native_avcastcontroller.h  native_avmetadata.h  native_avplaybackstate.h  native_avqueueitem.h  native_avsession.h  native_avsession_base.h  native_avsession_errors.h  native_deviceinfo.h
multimedia/player_framework/avimage_generator/: BUILD.gn  libavimage_generator.ndk.json
multimedia/player_framework/avmedia_source/: BUILD.gn  libavmedia_source.ndk.json
multimedia/player_framework/avrecorder/: BUILD.gn  libavrecorder.ndk.json
multimedia/player_framework/lowpower_avsink/: BUILD.gn  liblowpower_avsink.ndk.json
network/netstack/http_interceptor/: BUILD.gn  http_interceptor.h  http_interceptor_type.h  libhttp_interceptor.ndk.json
security/device_certificate/certmanager/: BUILD.gn  libcm.ndk.json
security/device_certificate/certmanager/include/: cm_native_api.h  cm_native_type.h
security/huks/: BUILD.gn  libhuks.external.crypto.ndk.json  libhuks.ndk.json
security/huks/include/: native_huks_api.h  native_huks_api_adapter.h  native_huks_external_crypto_api.h  native_huks_external_crypto_type.h  native_huks_param.h  native_huks_type.h
telephony/core_service/: BUILD.gn  libtelephony_radio.json
telephony/core_service/include/: telephony_radio.h  telephony_radio_type.h
(+807 files in other folders)
