# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("crypto_capi_header") {
  dest_dir = "$ndk_headers_out_dir/CryptoArchitectureKit"
  sources = [
    "./crypto_architecture_kit.h",
    "./crypto_asym_key.h",
    "./crypto_common.h",
    "./crypto_digest.h",
    "./crypto_signature.h",
    "./crypto_sym_cipher.h",
    "./crypto_sym_key.h",
  ]
}

ohos_ndk_library("libohcrypto") {
  output_name = "ohcrypto"
  output_extension = "so"
  ndk_description_file = "./libcrypto.ndk.json"
  system_capability = "SystemCapability.Security.CryptoFramework"
  system_capability_headers = [
    "CryptoArchitectureKit/crypto_architecture_kit.h",
    "CryptoArchitectureKit/crypto_asym_key.h",
    "CryptoArchitectureKit/crypto_common.h",
    "CryptoArchitectureKit/crypto_digest.h",
    "CryptoArchitectureKit/crypto_signature.h",
    "CryptoArchitectureKit/crypto_sym_cipher.h",
    "CryptoArchitectureKit/crypto_sym_key.h",
  ]
}
