# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("location_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/LocationKit"
  sources = [
    "./oh_location.h",
    "./oh_location_type.h",
  ]
}

ohos_ndk_library("liblocation_ndk") {
  ndk_description_file = "./liblocation.ndk.json"
  output_name = "location_ndk"
  output_extension = "so"
  min_compact_version = "13"
  system_capability = "SystemCapability.Location.Location.Core"
  system_capability_headers = [
    "./oh_location.h",
    "./oh_location_type.h",
  ]
}
