# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_library("libtransient_task_ndk") {
  output_name = "transient_task"
  output_extension = "so"
  ndk_description_file = "./libtransient_task.ndk.json"
  system_capability =
      "SystemCapability.ResourceSchedule.BackgroundTaskManager.TransientTask"
  system_capability_headers = [
    "transient_task/transient_task_api.h",
    "transient_task/transient_task_type.h",
  ]
}

ohos_ndk_headers("transient_task_header") {
  dest_dir = "$ndk_headers_out_dir/transient_task"
  sources = [
    "include/transient_task_api.h",
    "include/transient_task_type.h",
  ]
}
