# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/distributeddatamgr/preferences/preferences.gni")

ohos_ndk_headers("preferences_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/database/preferences/"
  sources = [
    "./include/oh_preferences.h",
    "./include/oh_preferences_err_code.h",
    "./include/oh_preferences_option.h",
    "./include/oh_preferences_values.h",
  ]
}

ohos_ndk_library("libohpreferences") {
  output_name = "ohpreferences"
  output_extension = "so"
  system_capability = "SystemCapability.DistributedDataManager.Preferences.Core"
  ndk_description_file = "./libpreferences.ndk.json"
  min_compact_version = "13"
  system_capability_headers = [
    "$ndk_headers_out_dir/database/preferences/oh_preferences.h",
    "$ndk_headers_out_dir/database/preferences/oh_preferences_err_code.h",
    "$ndk_headers_out_dir/database/preferences/oh_preferences_values.h",
    "$ndk_headers_out_dir/database/preferences/oh_preferences_option.h",
  ]
}
