# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/distributeddatamgr/relational_store/relational_store.gni")

ohos_ndk_headers("native_rdb_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/database/rdb/"
  sources = [
    "./include/oh_cursor.h",
    "./include/oh_predicates.h",
    "./include/oh_rdb_transaction.h",
    "./include/oh_rdb_types.h",
    "./include/oh_value_object.h",
    "./include/oh_values_bucket.h",
    "./include/relational_store.h",
    "./include/relational_store_error_code.h",
  ]
}

ohos_ndk_headers("data_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/database/data/"
  sources = [
    "./include/data_asset.h",
    "./include/oh_data_value.h",
    "./include/oh_data_values.h",
    "./include/oh_data_values_buckets.h",
  ]
}

ohos_ndk_library("libnative_rdb_ndk") {
  output_name = "native_rdb_ndk"
  system_capability =
      "SystemCapability.DistributedDataManager.RelationalStore.Core"
  ndk_description_file = "./libnative_rdb.ndk.json"
  min_compact_version = "11"
  system_capability_headers = [
    "database/data/data_asset.h",
    "database/data/oh_data_value.h",
    "database/data/oh_data_values.h",
    "database/data/oh_data_values_buckets.h",
    "database/rdb/oh_cursor.h",
    "database/rdb/oh_predicates.h",
    "database/rdb/oh_rdb_transaction.h",
    "database/rdb/oh_rdb_types.h",
    "database/rdb/oh_value_object.h",
    "database/rdb/oh_values_bucket.h",
    "database/rdb/relational_store.h",
    "database/rdb/relational_store_error_code.h",
  ]
}
