# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/distributedhardware/device_manager/device_manager.gni")

ohos_ndk_headers("devicemanager_ndk_header") {
  dest_dir = "$ndk_headers_out_dir/distributedhardware/device_manager/"
  sources = [
    "./include/oh_device_manager.h",
    "./include/oh_device_manager_err_code.h",
  ]
}

ohos_ndk_library("libdevicemanager_ndk") {
  output_name = "devicemanager_ndk"
  output_extension = "so"
  system_capability = "SystemCapability.DistributedHardware.DeviceManager"
  ndk_description_file = "./libdevicemanager.ndk.json"
  min_compact_version = "20"
  system_capability_headers = [
    "$ndk_headers_out_dir/distributedhardware/device_manager/oh_device_manager.h",
    "$ndk_headers_out_dir/distributedhardware/device_manager/oh_device_manager_err_code.h",
  ]
}
