# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

ohos_ndk_library("libohclouddiskmanager") {
  output_name = "ohclouddiskmanager"
  output_extension = "so"
  min_compact_version = "21"
  ndk_description_file = "./liboh_cloud_disk_manager.ndk.json"
  system_capability = "SystemCapability.FileManagement.CloudDiskManager"
  system_capability_headers = [
    "filemanagement/clouddiskmanager/cloud_disk_error_code.h",
    "filemanagement/clouddiskmanager/oh_cloud_disk_manager.h",
  ]
}

ohos_ndk_headers("oh_cloud_disk_manager") {
  dest_dir = "${ndk_headers_out_dir}/filemanagement/clouddiskmanager"
  sources = [
    "./include/cloud_disk_error_code.h",
    "./include/oh_cloud_disk_manager.h",
  ]
}
