# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_library("libohcompress") {
  ndk_description_file = "./libohcompress.ndk.json"
  min_compact_version = "26.0.0"
  output_name = "ohcompress"
  output_extension = "so"
  system_capability = "SystemCapability.FileManagement.File.FileIO"
  system_capability_headers = [
    "filemanagement/compress/oh_archive.h",
    "filemanagement/compress/oh_archive_errcode.h",
  ]
}

ohos_ndk_headers("oh_archive_header") {
  dest_dir = "$ndk_headers_out_dir/filemanagement/compress/"
  sources = [
    "./include/oh_archive.h",
    "./include/oh_archive_errcode.h",
  ]
}