# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("native_i18n_ndk") {
  ndk_description_file = "./libnative_i18n.ndk.json"
  min_compact_version = "22"
  output_name = "ohi18n"
  output_extension = "so"
  system_capability = "SystemCapability.Global.I18n"
  system_capability_headers = [
    "i18n/errorcode.h",
    "i18n/timezone.h",
  ]
}

ohos_ndk_headers("native_i18n_header") {
  dest_dir = "$ndk_headers_out_dir/i18n"
  sources = [
    "./include/errorcode.h",
    "./include/timezone.h",
  ]
}
