# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("librawfile_ndk") {
  ndk_description_file = "./librawfile.ndk.json"
  min_compact_version = "1"
  output_name = "rawfile"
}

ohos_ndk_headers("rawfile_header") {
  dest_dir = "$ndk_headers_out_dir/rawfile"
  sources = [
    "./include/rawfile/raw_dir.h",
    "./include/rawfile/raw_file.h",
    "./include/rawfile/raw_file_manager.h",
  ]
}

ohos_ndk_library("native_resmgr_ndk") {
  ndk_description_file = "./libnative_resmgr.ndk.json"
  min_compact_version = "1"
  output_name = "ohresmgr"
  output_extension = "so"
}

ohos_ndk_headers("native_resmgr_header") {
  dest_dir = "$ndk_headers_out_dir/resourcemanager"
  sources = [
    "./include/resourcemanager/ohresmgr.h",
    "./include/resourcemanager/resmgr_common.h",
  ]
}
