# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("ohavsession_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/av_session"
  sources = [
    "native_avmetadata.h",
    "native_avsession.h",
    "native_avsession_errors.h",
  ]
}

ohos_ndk_library("libohavsession_ndk") {
  output_name = "ohavsession"
  output_extension = "so"
  ndk_description_file = "./libohavsession.ndk.json"
  system_capability = "SystemCapability.Multimedia.AVSession.Core"
  system_capability_headers = [
    "multimedia/av_session/native_avmetadata.h",
    "multimedia/av_session/native_avsession.h",
    "multimedia/av_session/native_avsession_errors.h",
  ]
}
