# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libhuks_ndk") {
  output_name = "huks_ndk"
  output_extension = "z.so"
  ndk_description_file = "./libhuks.ndk.json"
  min_compact_version = "1"

  system_capability = "SystemCapability.Security.Huks.Core"
  system_capability_headers = [
    "huks/native_huks_api.h",
    "huks/native_huks_param.h",
    "huks/native_huks_type.h",
  ]
}

ohos_ndk_library("libhuks_external_crypto") {
  output_name = "huks_external_crypto"
  output_extension = "z.so"
  ndk_description_file = "./libhuks.external.crypto.ndk.json"
  min_compact_version = "1"

  system_capability = "SystemCapability.Security.Huks.CryptoExtension"
  system_capability_headers = [
    "huks/native_huks_external_crypto_api.h",
    "huks/native_huks_external_crypto_type.h",
  ]
}

ohos_ndk_headers("huks_header") {
  dest_dir = "$ndk_headers_out_dir/huks"
  sources = [
    "./include/native_huks_api.h",
    "./include/native_huks_external_crypto_api.h",
    "./include/native_huks_external_crypto_type.h",
    "./include/native_huks_param.h",
    "./include/native_huks_type.h",
  ]
}
