# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libtelephony_radio") {
  output_name = "telephony_radio"
  output_extension = "so"
  ndk_description_file = "./libtelephony_radio.json"
  min_compact_version = "1"
  system_capability = "SystemCapability.Telephony.CoreService"

  system_capability_headers = [
    "telephony/core_service/telephony_radio.h",
    "telephony/core_service/telephony_radio_type.h",
  ]
}

ohos_ndk_headers("telephony_radio_header") {
  dest_dir = "$ndk_headers_out_dir/telephony/core_service"
  sources = [
    "include/telephony_radio.h",
    "include/telephony_radio_type.h",
  ]
}
