# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("native_display_soloist_header") {
  dest_dir = "$ndk_headers_out_dir/native_display_soloist"
  sources = [ "native_display_soloist.h" ]
}

ohos_ndk_library("libnative_display_soloist_ndk") {
  output_name = "native_display_soloist"
  output_extension = "so"
  ndk_description_file = "./libnative_display_soloist.ndk.json"
  system_capability = "SystemCapability.Graphic.Graphic2D.HyperGraphicManager"
  system_capability_headers =
      [ "native_display_soloist/native_display_soloist.h" ]
}
