# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_ndk_library("libohcert_manager") {
  output_name = "ohcert_manager"
  output_extension = "z.so"
  ndk_description_file = "./libcm.ndk.json"
  min_compact_version = "1"

  system_capability = "SystemCapability.Security.CertificateManager"
  system_capability_headers = [
    "device_certificate/certmanager/cm_native_api.h",
    "device_certificate/certmanager/cm_native_type.h",
  ]
}

ohos_ndk_headers("cm_header") {
  dest_dir = "$ndk_headers_out_dir/device_certificate/certmanager"
  sources = [
    "include/cm_native_api.h",
    "include/cm_native_type.h",
  ]
}